examples/bad/MismatchedTypes.pas
PROGRAM MismatchedTypes;

VAR
	i: integer;
BEGIN
	i := 'Oh no';

END.
